--- a/app/assets/scss/base/_utilities.scss
+++ b/app/assets/scss/base/_utilities.scss
@@ -2,18 +2,17 @@
     text-align: center;
 }
 
-.u-m-bottom-v-large {
-    margin-bottom: rem(80);
+.u-m-bottom {
+    &-v-large { margin-bottom: rem(80) }
+    &-large { margin-bottom: rem(60) }
+    &-medium { margin-bottom: rem(40) }
+    &-small { margin-bottom: rem(15) }
 }
 
-.u-m-bottom-large {
-    margin-bottom: rem(60);
-}
-
-.u-m-bottom-medium {
-    margin-bottom: rem(40);
-}
-
-.u-m-bottom-small {
-    margin-bottom: rem(15px);
+.u-m-top {
+    &-huge { margin-top:  rem(100) }
+    &-v-large { margin-top: rem(80) }
+    &-large { margin-top: rem(60) }
+    &-medium { margin-top: rem(40) }
+    &-small { margin-top: rem(15) }
 }
