--- a/app/assets/scss/base/_variables.scss
+++ b/app/assets/scss/base/_variables.scss
@@ -2,13 +2,21 @@ $lightGreen: #7ed56f;
 $midGreen: #55c57a;
 $darkGreen: #28b485;
 
-$gray-light-1: #f7f7f7;
+$lightYellow: #ffb900;
+$darkYellow: #ff7738;
 
+$lightBlue: #2998ff;
+$darkBlue: #5643fa;
+
+$gray-light-1: #f7f7f7;
+$gray-light-2: #eee;
 $gray: #777;
 $white: #fff;
 $black: #000;
 
 $gutter-x: 3.75rem;
 $gutter-y: 5rem;
-
 $columns: 12;
+
+
+$default-box-shadow: 0 rem(15) rem(40) rgba($black, 0.15);
