--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -56,8 +56,23 @@ h1 {
   margin-bottom: 40px;
   margin-bottom: 2.5rem; }
 .u-m-bottom-small {
-  margin-bottom: 15px;
-  margin-bottom: 0.9375rem; }
+  margin-bottom: 15.008px;
+  margin-bottom: 0.938rem; }
+.u-m-top-huge {
+  margin-top: 100px;
+  margin-top: 6.25rem; }
+.u-m-top-v-large {
+  margin-top: 80px;
+  margin-top: 5rem; }
+.u-m-top-large {
+  margin-top: 60px;
+  margin-top: 3.75rem; }
+.u-m-top-medium {
+  margin-top: 40px;
+  margin-top: 2.5rem; }
+.u-m-top-small {
+  margin-top: 15.008px;
+  margin-top: 0.938rem; }
 .heading-primary {
   text-transform: uppercase;
   -webkit-backface-visibility: hidden;
@@ -68,8 +83,8 @@ h1 {
     font-weight: 400;
     font-size: 60px;
     font-size: 3.75rem;
-    letter-spacing: 35px;
-    letter-spacing: 2.1875rem;
+    letter-spacing: 35.008px;
+    letter-spacing: 2.188rem;
     -webkit-animation: fadeInLeft 1s ease-out;
             animation: fadeInLeft 1s ease-out; }
 .heading-primary--subtitle {
@@ -78,8 +93,8 @@ h1 {
     font-weight: 700;
     font-size: 20px;
     font-size: 1.25rem;
-    letter-spacing: 17.39999px;
-    letter-spacing: 1.0875rem;
+    letter-spacing: 17.408px;
+    letter-spacing: 1.088rem;
     -webkit-animation: fadeInRight 1s ease-out;
             animation: fadeInRight 1s ease-out; }
 .heading-primary--b-margin {
@@ -87,8 +102,8 @@ h1 {
     margin-bottom: 3.75rem; }
 .heading-secondary {
   text-transform: uppercase;
-  font-size: 35px;
-  font-size: 2.1875rem;
+  font-size: 35.008px;
+  font-size: 2.188rem;
   font-weight: 700;
   position: relative;
   background-image: linear-gradient(to right, #7ed56f, #28b485);
@@ -101,16 +116,18 @@ h1 {
 .heading-secondary:hover {
     -webkit-transform: skew(15deg, 2deg) scale(1.1);
             transform: skew(15deg, 2deg) scale(1.1);
-    text-shadow: 5px 1px 20px rgba(0, 0, 0, 0.2);
-    text-shadow: 0.3125rem 0.0625rem 1.25rem rgba(0, 0, 0, 0.2); }
+    text-shadow: 5.008px 1.008px 20px rgba(0, 0, 0, 0.2);
+    text-shadow: 0.313rem 0.063rem 1.25rem rgba(0, 0, 0, 0.2); }
 .heading-tertiary {
   font-size: 16px;
   font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase; }
+.paragraph {
+  font-size: 100%; }
 .paragraph:not(:last-child) {
-  margin-bottom: 30px;
-  margin-bottom: 1.875rem; }
+    margin-bottom: 30px;
+    margin-bottom: 1.875rem; }
 @-webkit-keyframes fadeInLeft {
   0% {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -200,13 +217,13 @@ h1 {
   position: relative; }
 .header__logo {
     position: absolute;
-    top: 40px;
-    top: 2.5rem;
-    left: 40px;
-    left: 2.5rem; }
+    top: 2.5;
+    right: 0;
+    bottom: 0;
+    left: 2.5; }
 .header__logo__img {
-      height: 35px;
-      height: 2.1875rem; }
+      height: 35.008px;
+      height: 2.188rem; }
 .header__text-content {
     position: absolute;
     top: 40%;
@@ -229,7 +246,7 @@ h1 {
 .btn:active {
   -webkit-transform: translateY(-1px);
           transform: translateY(-1px);
-  box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0.313rem 0.625rem rgba(0, 0, 0, 0.2); }
 .btn:after {
   content: '';
   display: inline-block;
@@ -249,11 +266,19 @@ h1 {
 .btn--white {
   background-color: #fff;
   color: #777;
-  padding: 15px 40px;
-  padding: 0.9375rem 2.5rem;
+  padding: 15.008px 40px;
+  padding: 0.938rem 2.5rem;
   display: inline-block; }
 .btn--white:after {
     background-color: #fff; }
+.btn--green {
+  background-color: #55c57a;
+  color: #fff;
+  padding: 15.008px 40px;
+  padding: 0.938rem 2.5rem;
+  display: inline-block; }
+.btn--green:after {
+    background-color: #55c57a; }
 .btn--animated {
   -webkit-animation: fadeInBottom 0.5s ease-in-out 0.75s backwards;
           animation: fadeInBottom 0.5s ease-in-out 0.75s backwards; }
@@ -262,7 +287,7 @@ h1 {
   display: inline-block;
   text-decoration: none;
   border-bottom: 1px solid #55c57a;
-  padding: 3px;
+  padding: 3px 5px;
   transition: all 0.3s ease-in-out; }
 .btn-text:hover {
   background-color: #55c57a;
@@ -273,7 +298,7 @@ h1 {
 .btn-text:active {
   -webkit-transform: translateY(0);
           transform: translateY(0);
-  box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 0.313rem 0.625rem rgba(0, 0, 0, 0.15); }
 .section-about {
   background-color: #f7f7f7;
   padding: 200px 0;
@@ -292,6 +317,16 @@ h1 {
 .section-features > * {
     -webkit-transform: skewY(7deg);
             transform: skewY(7deg); }
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 200px 0 150px 0;
+  padding: 12.5rem 0 9.375rem 0;
+  margin-top: -100px;
+  margin-top: -6.25rem; }
+.section-stories {
+  padding: 150px 0;
+  padding: 9.375rem 0;
+  position: relative; }
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -312,6 +347,9 @@ h1 {
 .row__3 {
     flex: none;
     width: calc(25% - 2.8125rem); }
+.row__4 {
+    flex: none;
+    width: calc(33.33333% - 2.5rem); }
 .wrapper {
   max-width: 1140px;
   max-width: 71.25rem;
@@ -323,7 +361,7 @@ h1 {
   position: relative; }
 .gallery__photo {
     width: 55%;
-    box-shadow: 0 0.9375rem 2.5rem rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0.938rem 2.5rem rgba(0, 0, 0, 0.4);
     border-radius: 2px;
     position: absolute;
     z-index: 1;
@@ -344,11 +382,11 @@ h1 {
       top: 100px;
       top: 6.25rem; }
 .gallery__photo:hover {
-      outline: 15px solid #55c57a;
-      outline: 0.9375rem solid #55c57a;
-      -webkit-transform: scale(1.05) translateY(-0.3125rem);
-              transform: scale(1.05) translateY(-0.3125rem);
-      box-shadow: 0 1.5625rem 2.5rem rgba(0, 0, 0, 0.5);
+      outline: 15.008px solid #55c57a;
+      outline: 0.938rem solid #55c57a;
+      -webkit-transform: scale(1.05) translateY(-0.312rem);
+              transform: scale(1.05) translateY(-0.312rem);
+      box-shadow: 0 1.563rem 2.5rem rgba(0, 0, 0, 0.5);
       z-index: 2; }
 .gallery:hover .gallery__photo:not(:hover) {
     -webkit-transform: scale(0.95);
@@ -356,23 +394,215 @@ h1 {
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
   height: 100%;
-  font-size: 15px;
-  font-size: 0.9375rem;
-  padding: 25px;
-  padding: 1.5625rem;
+  font-size: 15.008px;
+  font-size: 0.938rem;
+  padding: 25.008px;
+  padding: 1.563rem;
   border-radius: 3px;
   text-align: center;
-  box-shadow: 0 0.9375rem 2.5rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.938rem 2.5rem rgba(0, 0, 0, 0.15);
   transition: all 0.2s ease-in-out; }
 .feature-box:hover {
-    -webkit-transform: translateY(-0.9375rem) scale(1.03);
-            transform: translateY(-0.9375rem) scale(1.03); }
+    -webkit-transform: translateY(-0.937rem) scale(1.03);
+            transform: translateY(-0.937rem) scale(1.03); }
 .feature-box__icon {
     font-size: 60px;
     font-size: 3.75rem;
-    margin-bottom: 5px;
-    margin-bottom: 0.3125rem;
+    margin-bottom: 5.008px;
+    margin-bottom: 0.313rem;
     display: inline-block;
     background-image: linear-gradient(to right, #7ed56f, #28b485);
     color: transparent;
     -webkit-background-clip: text; }
+.card {
+  -webkit-perspective: 93.75rem;
+          perspective: 93.75rem;
+  position: relative;
+  height: 520px;
+  height: 32.5rem; }
+.card__side {
+    height: 520px;
+    height: 32.5rem;
+    transition: all 0.8s ease-in-out;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 0.938rem 2.5rem rgba(0, 0, 0, 0.15); }
+.card__side--front {
+      background-color: #fff; }
+.card__side--back {
+      -webkit-transform: rotateY(180deg);
+              transform: rotateY(180deg); }
+.card__side--back--1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7738); }
+.card__side--back--2 {
+        background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+.card__side--back--3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+.card:hover .card__side--front {
+    -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg); }
+.card:hover .card__side--back {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0); }
+.card__picture {
+    background-size: cover;
+    height: 230px;
+    height: 14.375rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
+.card__picture--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7738), url("../images/nat-5.jpg"); }
+.card__picture--2 {
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url("../images/nat-6.jpg"); }
+.card__picture--3 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("../images/nat-7.jpg"); }
+.card__heading {
+    font-size: 28px;
+    font-size: 1.75rem;
+    font-weight: 300;
+    text-align: right;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: 120px;
+    top: 7.5rem;
+    right: 20px;
+    right: 1.25rem;
+    width: 75%;
+    z-index: 6; }
+.card__heading-span {
+    padding: 10px 15.008px;
+    padding: 0.625rem 0.938rem;
+    -webkit-box-decoration-break: clone;
+            box-decoration-break: clone; }
+.card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 56, 0.85)); }
+.card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+.card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+.card__details {
+    padding: 30px;
+    padding: 1.875rem; }
+.card__details ul {
+      list-style-type: none;
+      width: 80%;
+      margin: 0 auto; }
+.card__details li {
+      text-align: center;
+      font-size: 15.008px;
+      font-size: 0.938rem;
+      padding: 10px;
+      padding: 0.625rem; }
+.card__details li:not(:last-child) {
+        border-bottom: 1px solid #eee; }
+.card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+.card__price {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 80px;
+    margin-bottom: 5rem; }
+.card__price--only {
+      font-size: 14px;
+      font-size: 0.875rem;
+      text-transform: uppercase; }
+.card__price--value {
+      font-size: 60px;
+      font-size: 3.75rem;
+      font-weight: 100; }
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 1.875rem 3.75rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 3px;
+  padding: 60px;
+  padding: 3.75rem;
+  padding-left: 90px;
+  padding-left: 5.625rem;
+  -webkit-transform: skewX(-12deg);
+          transform: skewX(-12deg); }
+.story__shape {
+    width: 150px;
+    width: 9.375rem;
+    height: 150px;
+    height: 9.375rem;
+    float: left;
+    -webkit-clip-path: circle(50% at 50% 50%);
+            clip-path: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+            shape-outside: circle(50% at 50% 50%);
+    -webkit-transform: translateX(-1.875rem) skewX(12deg);
+            transform: translateX(-1.875rem) skewX(12deg);
+    position: relative; }
+.story__image {
+    height: 100%;
+    -webkit-transform: translateX(-1.875rem) scale(1.4);
+            transform: translateX(-1.875rem) scale(1.4);
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    transition: all 0.5s; }
+.story__text {
+    -webkit-transform: skewX(12deg);
+            transform: skewX(12deg); }
+.story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, 20%);
+            transform: translate(-50%, 20%);
+    text-transform: uppercase;
+    width: 50%;
+    color: #fff;
+    text-align: center;
+    font-size: 17.008px;
+    font-size: 1.063rem;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    opacity: 0;
+    transition: all 0.5s;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden; }
+.story:hover .story__caption {
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    opacity: 1; }
+.story:hover .story__image {
+    -webkit-transform: translateX(-1.875rem) scale(1);
+            transform: translateX(-1.875rem) scale(1);
+    -webkit-filter: blur(3px) brightness(80%);
+            filter: blur(3px) brightness(80%); }
+.bg-video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -7;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=15)";
+  opacity: 0.15;
+  overflow: hidden; }
+.bg-video__content {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
