--- a/app/assets/scss/base/_utilities.scss
+++ b/app/assets/scss/base/_utilities.scss
@@ -1,18 +1,16 @@
-.u-center-text {
-    text-align: center;
-}
+.u-center-text { text-align: center !important }
 
 .u-m-bottom {
-    &-v-large { margin-bottom: rem(80) }
-    &-large { margin-bottom: rem(60) }
-    &-medium { margin-bottom: rem(40) }
-    &-small { margin-bottom: rem(15) }
+    &-v-large { margin-bottom: rem(80) !important }
+    &-large { margin-bottom: rem(60) !important }
+    &-medium { margin-bottom: rem(40) !important }
+    &-small { margin-bottom: rem(15) !important }
 }
 
 .u-m-top {
-    &-huge { margin-top:  rem(100) }
-    &-v-large { margin-top: rem(80) }
-    &-large { margin-top: rem(60) }
-    &-medium { margin-top: rem(40) }
-    &-small { margin-top: rem(15) }
+    &-huge { margin-top:  rem(100) !important }
+    &-v-large { margin-top: rem(80) !important }
+    &-large { margin-top: rem(60) !important }
+    &-medium { margin-top: rem(40) !important }
+    &-small { margin-top: rem(15) !important }
 }
