--- a/app/assets/scss/base/_variables.scss
+++ b/app/assets/scss/base/_variables.scss
@@ -10,7 +10,11 @@ $darkBlue: #5643fa;
 
 $gray-light-1: #f7f7f7;
 $gray-light-2: #eee;
+
 $gray: #777;
+$grayDark: #999;
+$grayDarkest: #333;
+
 $white: #fff;
 $black: #000;
 
