--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -19,3 +19,5 @@
 @import 'modules/cards';
 @import 'modules/story';
 @import 'modules/bg-video';
+@import 'modules/form';
+@import 'modules/footer';
