--- a/app/assets/scss/modules/_sections.scss
+++ b/app/assets/scss/modules/_sections.scss
@@ -27,3 +27,25 @@
     padding: rem(150) 0;
     position: relative
 }
+
+.section-book {
+    padding: rem(150) 0;
+    background-image: linear-gradient(to right bottom, $lightGreen, $darkGreen);
+}
+
+.book {
+    background-image: linear-gradient(105deg,
+                                rgba($white, 0.9) 0%,
+                                rgba($white, 0.9) 50%,
+                                transparent 50%),
+                     url('../images/nat-10.jpg');
+    background-size: cover;
+    border-radius: 3px;
+    box-shadow: $default-box-shadow;
+    height: rem(500);
+
+    &__form {
+        width: 50%;
+        padding: rem(60);
+    }
+}
