Designed the navigation

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -21,3 +21,5 @@
 @import 'modules/bg-video';
 @import 'modules/form';
 @import 'modules/footer';
+@import 'modules/navigation';
+@import 'modules/popup';
