--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -756,3 +756,124 @@ h1 {
     padding-top: 1.25rem;
     width: 80%;
     float: right; }
+.navigation__checkbox {
+  display: none; }
+.navigation__button {
+  background-color: #fff;
+  width: 70px;
+  width: 4.375rem;
+  height: 70px;
+  height: 4.375rem;
+  position: fixed;
+  top: 60px;
+  top: 3.75rem;
+  right: 60px;
+  right: 3.75rem;
+  border-radius: 50%;
+  z-index: 2000;
+  box-shadow: 0 0.625rem 1.875rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
+.navigation__background {
+  width: 60px;
+  width: 3.75rem;
+  height: 60px;
+  height: 3.75rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 65.008px;
+  top: 4.063rem;
+  right: 65.008px;
+  right: 4.063rem;
+  background-image: radial-gradient(#7ed56f, #28b485);
+  z-index: 1000;
+  transition: -webkit-transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86), -webkit-transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86); }
+.navigation__nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1500;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  opacity: 0;
+  width: 0;
+  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  list-style-type: none;
+  text-align: center;
+  width: 100%; }
+.navigation__item {
+  margin: 10px;
+  margin: 0.625rem; }
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 30px;
+  font-size: 1.875rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  padding: 0.625rem 1.25rem;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, white 50%);
+  background-size: 250%;
+  transition: all 0.4s ease-in-out; }
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #55c57a;
+  -webkit-transform: translateX(0.625rem);
+          transform: translateX(0.625rem); }
+.navigation__checkbox:checked ~ .navigation__background {
+  -webkit-transform: scale(100);
+          transform: scale(100); }
+.navigation__checkbox:checked ~ .navigation__nav {
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  opacity: 1;
+  width: 100%; }
+.navigation__icon {
+  position: relative;
+  margin-top: 35.008px;
+  margin-top: 2.188rem; }
+.navigation__icon, .navigation__icon:before, .navigation__icon:after {
+    width: 30px;
+    width: 1.875rem;
+    height: 2px;
+    background-color: #333;
+    display: inline-block; }
+.navigation__icon:before, .navigation__icon:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    transition: all 0.2s ease-in-out; }
+.navigation__icon:before {
+    top: -8px;
+    top: -0.5rem; }
+.navigation__icon:after {
+    top: 8px;
+    top: 0.5rem; }
+.navigation__button:hover .navigation__icon:before {
+  top: -10px;
+  top: -0.625rem; }
+.navigation__button:hover .navigation__icon:after {
+  top: 10px;
+  top: 0.625rem; }
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+.navigation__checkbox:checked + .navigation__button .navigation__icon:before {
+    top: 0;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg); }
+.navigation__checkbox:checked + .navigation__button .navigation__icon:after {
+    top: 0;
+    -webkit-transform: rotate(-135deg);
+            transform: rotate(-135deg); }
