--- a/app/assets/scss/modules/_btn.scss
+++ b/app/assets/scss/modules/_btn.scss
@@ -42,6 +42,7 @@
     &:hover::after {
         transform: scale(1.4, 1.6);
         opacity: 0;
+        visibility: hidden;
     }
 
     &--white {
@@ -72,7 +73,8 @@
 }
 
 .btn-text {
-    &:link, &:visited {
+    &:link,
+    &:visited {
         color: $midGreen;
         display: inline-block;
         text-decoration: none;
