--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -33,7 +33,7 @@
   margin: 0;
   box-sizing: inherit; }
 html {
-  font-size: 100%; }
+  font-size: 16px; }
 body {
   font-weight: 400;
   line-height: 1.7;
@@ -81,6 +81,8 @@ h1 {
 .u-m-top-small {
   margin-top: 15.008px !important;
   margin-top: 0.938rem !important; }
+.u-no-b-margin {
+  margin-bottom: 0 !important; }
 .heading-primary {
   text-transform: uppercase;
   -webkit-backface-visibility: hidden;
@@ -225,10 +227,10 @@ h1 {
   position: relative; }
 .header__logo {
     position: absolute;
-    top: 2.5;
-    right: 0;
-    bottom: 0;
-    left: 2.5; }
+    top: 40px;
+    top: 2.5rem;
+    left: 40px;
+    left: 2.5rem; }
 .header__logo__img {
       height: 35.008px;
       height: 2.188rem; }
@@ -313,8 +315,8 @@ h1 {
   box-shadow: 0 0.313rem 0.625rem rgba(0, 0, 0, 0.15); }
 .section-about {
   background-color: #f7f7f7;
-  padding: 200px 0;
-  padding: 12.5rem 0;
+  padding: 250px 0;
+  padding: 15.625rem 0;
   margin-top: -20vh; }
 .section-features {
   padding: 180px 0;
@@ -347,9 +349,7 @@ h1 {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../images/nat-10.jpg");
   background-size: cover;
   border-radius: 3px;
-  box-shadow: 0 0.938rem 2.5rem rgba(0, 0, 0, 0.15);
-  height: 500px;
-  height: 31.25rem; }
+  box-shadow: 0 0.938rem 2.5rem rgba(0, 0, 0, 0.15); }
 .book__form {
     width: 50%;
     padding: 60px;
@@ -806,7 +806,6 @@ h1 {
   transition: transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86);
   transition: transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86), -webkit-transform 0.8s cubic-bezier(0.785, 0.135, 0.15, 0.86); }
 .navigation__nav {
-  height: 100vh;
   position: fixed;
   top: 0;
   right: 0;
@@ -842,7 +841,8 @@ h1 {
   padding: 0.625rem 1.25rem;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, white 50%);
   background-size: 250%;
-  transition: all 0.4s ease-in-out; }
+  transition: all 0.4s ease-in-out;
+  visibility: hidden; }
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
   color: #55c57a;
@@ -855,6 +855,8 @@ h1 {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   opacity: 1;
   width: 100%; }
+.navigation__checkbox:checked ~ .navigation__nav .navigation__link {
+    visibility: visible; }
 .navigation__icon {
   position: relative;
   margin-top: 35.008px;
@@ -932,11 +934,20 @@ h1 {
     -webkit-transform: translate(-50%, -50%) scale(0.2);
             transform: translate(-50%, -50%) scale(0.2);
     transition: all .4s .2s; }
-.popup__images img {
-    width: 100%;
-    display: block;
-    -webkit-backface-visibility: hidden;
-            backface-visibility: hidden; }
+.popup__images {
+    height: 100%; }
+.popup__images--img-1 {
+      background-image: url("../images/nat-8.jpg");
+      background-size: cover;
+      height: 50%;
+      width: 100%;
+      display: block; }
+.popup__images--img-2 {
+      background-image: url("../images/nat-9.jpg");
+      background-size: cover;
+      height: 50%;
+      width: 100%;
+      display: block; }
 .popup__text-content {
     padding: 70px 50px;
     padding: 4.375rem 3.125rem; }
@@ -973,3 +984,172 @@ h1 {
       -webkit-backface-visibility: hidden;
               backface-visibility: hidden;
       -webkit-filter: blur(0); }
+@media (min-width: 1800px) {
+    html {
+      font-size: 18px; } }
+@media (max-width: 1200px) {
+    html {
+      font-size: 15px; }
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url("../images/nat-10.jpg"); }
+      .book__form {
+        width: 65%; } }
+@media (max-width: 900px) {
+    html {
+      font-size: 14px; }
+    body {
+      padding: 0; }
+    .u-m-bottom-v-large {
+      margin-bottom: 3.125rem !important; }
+    .u-m-bottom-large {
+      margin-bottom: 2.5rem !important; }
+    .u-m-bottom-medium {
+      margin-bottom: 1.875rem !important; }
+    .u-m-top-huge {
+      margin-top: 3.125rem !important; }
+    .heading-secondary {
+      font-size: 1.875rem; }
+      .header__text-content {
+        top: 50%; }
+    .section-about {
+      padding: 15.625rem 0 12.5rem 0; }
+    .section-features {
+      padding: 7.5rem 0 5.625rem 0; }
+    .section-tours {
+      padding: 12.5rem 0 6.25rem 0; }
+    .section-stories {
+      padding: 6.25rem 0; }
+    .section-book {
+      padding: 6.25rem 0; }
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url("../images/nat-10.jpg"); }
+      .book__form {
+        width: 100%; }
+    .row > * {
+      flex: none;
+      width: 100%;
+      margin-left: 0 !important;
+      margin-bottom: 3.75rem; }
+      .wrapper--b-margin {
+        margin-bottom: 0; }
+    .wrapper {
+      max-width: 31.25rem;
+      padding: 0 1.875rem; }
+      .wrapper:not(:last-child) {
+        margin-bottom: 3.75rem; }
+      .gallery__photo {
+        float: left;
+        position: relative;
+        width: 33.33%;
+        box-shadow: 0 0.938rem 1.875rem rgba(0, 0, 0, 0.2); }
+        .gallery__photo--p1 {
+          top: 0rem;
+          -webkit-transform: scale(1.2);
+                  transform: scale(1.2); }
+        .gallery__photo--p2 {
+          top: -0.062rem;
+          right: 0;
+          -webkit-transform: scale(1.3);
+                  transform: scale(1.3);
+          z-index: 4; }
+        .gallery__photo--p3 {
+          top: 0.063rem;
+          left: 0;
+          -webkit-transform: scale(1.1);
+                  transform: scale(1.1); }
+    .feature-box {
+      padding: 1.25rem; }
+      .feature-box__icon {
+        margin-bottom: 0; }
+  .card {
+    -webkit-perspective: 93.75rem;
+            perspective: 93.75rem;
+    position: relative;
+    height: auto;
+    background-color: #fff;
+    box-shadow: 0 0.938rem 2.5rem rgba(0, 0, 0, 0.15);
+    overflow: hidden; }
+    .card__side {
+      height: auto;
+      position: relative;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      box-shadow: none; }
+      .card__side--back {
+        -webkit-transform: rotateY(0);
+                transform: rotateY(0);
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+    .card:hover .card__side--front {
+      -webkit-transform: rotateY(0);
+              transform: rotateY(0); }
+    .card__details {
+      padding: 0.625rem 1.875rem; }
+    .card__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      -webkit-transform: translate(0);
+              transform: translate(0);
+      width: 100%;
+      text-align: center;
+      padding: 4.375rem 2.5rem 2.5rem 2.5rem; }
+    .card__price {
+      margin-bottom: 1.875rem; }
+      .card__price--value {
+        font-size: 2.5rem; }
+    .story {
+      width: 100%;
+      padding: 2.5rem;
+      padding-left: 4.375rem; }
+    .form__input {
+      width: 100%; }
+    .form__radio-group {
+      width: 100%;
+      margin-bottom: 1.25rem; }
+    .footer {
+      padding-bottom: 0;
+      padding-top: 5rem; }
+      .footer__logo-box {
+        margin-bottom: 3.75rem; }
+      .footer__nav {
+        width: 100%; }
+      .footer__copyright {
+        width: 100%; }
+    .navigation__button {
+      top: 2.5rem;
+      right: 2.5rem; }
+    .navigation__background {
+      top: 2.813rem;
+      right: 2.813rem; } }
+@media (max-width: 600px) {
+      .heading-primary--title {
+        letter-spacing: 0.875rem;
+        font-size: 3.125rem; }
+      .heading-primary--subtitle {
+        letter-spacing: 0.313rem; }
+    .heading-secondary {
+      font-size: 1.563rem; }
+    .header {
+      -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 85vh, 0% 100%);
+              clip-path: polygon(0% 0%, 100% 0%, 100% 85vh, 0% 100%); }
+    .section-about {
+      padding: 12.5rem 0 9.375rem 0; }
+    .story {
+      -webkit-transform: skewX(0);
+              transform: skewX(0); }
+      .story__shape {
+        -webkit-transform: translateX(-1.875rem) skewX(0);
+                transform: translateX(-1.875rem) skewX(0); }
+      .story__text {
+        -webkit-transform: skewX(0);
+                transform: skewX(0); }
+    .navigation__button {
+      top: 1.875rem;
+      right: 1.875rem; }
+    .navigation__background {
+      top: 2.188rem;
+      right: 2.188rem; } }
