--- a/app/assets/scss/modules/_cards.scss
+++ b/app/assets/scss/modules/_cards.scss
@@ -42,9 +42,7 @@
 
     &:hover &__side--back {
         transform: rotateY(0);
-    }
-
-    // Front side styling
+    } // Front side styling
     &__picture {
         background-size: cover;
         height: rem(230);
@@ -85,20 +83,20 @@
 
         &--1 {
             background-image: linear-gradient(to right bottom,
-                rgba($lightYellow, 0.85),
-                rgba($darkYellow, 0.85));
+            rgba($lightYellow, 0.85),
+            rgba($darkYellow, 0.85));
         }
 
         &--2 {
             background-image: linear-gradient(to right bottom,
-                rgba($lightGreen, 0.85),
-                rgba($darkGreen, 0.85));
+            rgba($lightGreen, 0.85),
+            rgba($darkGreen, 0.85));
         }
 
         &--3 {
             background-image: linear-gradient(to right bottom,
-                rgba($lightBlue, 0.85),
-                rgba($darkBlue, 0.85));
+            rgba($lightBlue, 0.85),
+            rgba($darkBlue, 0.85));
         }
 
     }
@@ -123,8 +121,6 @@
         }
     }
 
-    // BACK SIDE STYLING
-
     &__cta {
         top: center;
         left: center;
@@ -145,5 +141,58 @@
             font-weight: 100;
         }
 
+    }
+}
+
+
+
+
+@include respond(tab-port) {
+    .card {
+        perspective: rem(1500);
+        position: relative;
+        height: auto;
+        background-color: $white;
+        box-shadow: $default-box-shadow;
+        overflow: hidden;
+
+        &__side {
+            height: auto;
+            position: relative 0;
+            width: 100%;
+            box-shadow: none;
+
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: rem(10) rem(30);
+        }
+
+        &__cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            text-align: center;
+            padding: rem(70) rem(40) rem(40) rem(40);
+        }
+
+        &__price {
+            margin-bottom: rem(30);
+
+            &--value {
+                font-size: rem(40);
+            }
+
+        }
     }
 }
