--- a/app/assets/scss/modules/_footer.scss
+++ b/app/assets/scss/modules/_footer.scss
@@ -4,9 +4,18 @@
     font-size: rem(13);
     color: $gray-light-1;
 
+    @include respond(tab-port) {
+        padding-bottom: 0;
+        padding-top: rem(80);
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: rem(80);
+
+        @include respond(tab-port) {
+            margin-bottom: rem(60);
+        }
     }
 
     &__logo {
@@ -18,6 +27,10 @@
         display: inline-block;
         padding-top: rem(20);
         width: 80%;
+
+        @include respond(tab-port) {
+            width: 100%
+        }
     }
 
     &__list {
@@ -49,5 +62,9 @@
         padding-top: rem(20);
         width: 80%;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%
+        }
     }
 }
