--- a/app/assets/scss/modules/_form.scss
+++ b/app/assets/scss/modules/_form.scss
@@ -17,6 +17,10 @@
         display: block;
         @include trans(0.3);
 
+         @include respond(tab-port) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 rem(10) rem(20) rgba($black, .1);
@@ -46,6 +50,11 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: rem(20);
+        }
     }
 
     &__radio-input {
