--- a/app/assets/scss/modules/_sections.scss
+++ b/app/assets/scss/modules/_sections.scss
@@ -1,7 +1,15 @@
 .section-about {
     background-color: $gray-light-1;
-    padding: rem(200) 0;
+    padding: rem(250) 0;
     margin-top: -20vh;
+
+    @include respond(tab-port) {
+        padding: rem(250) 0 rem(200) 0;
+    }
+
+    @include respond(phone) {
+        padding: rem(200) 0 rem(150) 0;
+    }
 }
 
 .section-features {
@@ -15,22 +23,41 @@
     & > * {
         transform: skewY(7deg);
     }
+
+    @include respond(tab-port) {
+        padding: rem(120) 0 rem(90) 0;
+    }
+
 }
 
 .section-tours {
     background-color: $gray-light-1;
     padding: rem(200) 0 rem(150) 0;
     margin-top: rem(-100);
+
+    @include respond(tab-port) {
+        padding: rem(200) 0 rem(100) 0;
+    }
 }
 
 .section-stories {
     padding: rem(150) 0;
-    position: relative
+    position: relative;
+
+    @include respond(tab-port) {
+        padding: rem(100) 0;
+    }
+
 }
 
 .section-book {
     padding: rem(150) 0;
     background-image: linear-gradient(to right bottom, $lightGreen, $darkGreen);
+
+    @include respond(tab-port) {
+        padding: rem(100) 0;
+    }
+
 }
 
 .book {
@@ -42,10 +69,32 @@
     background-size: cover;
     border-radius: 3px;
     box-shadow: $default-box-shadow;
-    height: rem(500);
+
+    @include respond(tab-land) {
+    background-image: linear-gradient(105deg,
+                                rgba($white, 0.9) 0%,
+                                rgba($white, 0.9) 65%,
+                                transparent 65%),
+                     url('../images/nat-10.jpg');
+    }
+
+    @include respond(tab-port) {
+    background-image: linear-gradient(105deg,
+                                rgba($white, 0.9) 0%,
+                                rgba($white, 0.9) 100%),
+                     url('../images/nat-10.jpg');
+    }
 
     &__form {
         width: 50%;
         padding: rem(60);
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
